<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">试金石</string>
    <string name="apk_name">TouchStone</string>
    <string name="powerby">Power By GKTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_desc">测试团队倾力打造\n最专业的安卓智能设备测试工具集</string>
    <string name="taskBroadCastAction">com.gk.touchstone.utility.TASK_ACTION</string>
    <string name="taskBroadCastName">taskBroadCastName</string>
    <string name="customPlanAction">com.gk.touchstone.CUSTOMPLAN_ACTION</string>
    <string name="customPlanBroadCastName">customPlanBroadCastName</string>
    <string name="networkUsing">http://www.igeak.com/AboutUS/Link</string>
    <string name="reportTips">格式：[任务次序-场景次序]+结果+[原因]+发生时间</string>
    <string name="tip_download_file">file will be saved to sdcard, the path is: </string>
    <string name="download_notification_title">MeiLiShuo</string>
    <string name="app_status_download">click to download</string>
    <string name="app_status_downloaded">downloaded, click to download again</string>
    <string name="app_status_download_fail">download fail, click to download again</string>
    <string name="server_addr">www.gktest.cn</string>
    <string name="server_port">8081</string>
    <string name="apkdir">Data</string>
    <string name="titlebtn_upload">upload</string>
    <string name="titlename_report">report</string>
    <string name="tab_1">首页</string>
    <string name="tab_2">稳定性</string>
    <string name="tab_3">性能</string>
    <string name="tab_4">设置</string>
    <string name="save">保存</string>
    <string name="start">开始</string>
    <string name="cancel">取消</string>
    <string name="stop">停止</string>
    <string name="list_plan_title">计划：</string>

    <string name="plan_run">Start</string>
    <string name="plan_running">running</string>
    <string name="plan_stop">Stop</string>
    <string name="plan_manage">Delete</string>
    <string name="plan_stop_tips">计划已经停止！</string>
    <string name="plan_finish">计划已经完成！</string>
    <string name="save_data">数据保存完成！</string>
    <string name="plan_exist">计划存在，请重新输入！</string>
    <string name="select_test">请选择至少一个测试项！</string>
    <string name="select_planError">计划类型选择异常！</string>
    <string name="plan_error1">任务进行中，请等待</string>
    <string name="plan_stability">稳定性测试运行中</string>
    <string name="plan_StabilityTest_desc">请输入需要进行稳定性测试的时长，将以串行的模式进行以下场景的随机运行。包括：拍照场景、GPS场景、WiFi开关、蓝牙开关、飞行模式开关、存储卡内拷贝</string>
    <string name="plan_StressTest_desc">请输入需要进行稳定性测试的时长，将以并行的模式进行以下场景的随机运行。包括：蓝牙开关、AP数量、GPS加压、存储卡内拷贝。</string>
    <string name="home_desc">运行于智能设备上的\n客户端工具+信息查询工具</string>
    <string name="reference_desc">通过已购机用户的测试结果\n获得用户体验的评估结果</string>
    <string name="rights_desc">测试结果存在较大差异\n及时发现设备存在质量问题</string>
    <string name="diy_desc">透过智能设备冰冷的外壳\n深入的侦知性能和稳定性指标</string>
    <string name="custom_plan">自定义测试计划的运行和管理，点击列表查看详细的任务</string>
    <string name="report_desc">全部Pass的测试报告不予显示详细</string>
    <string name="res_desc">配置测试任务数据</string>
    <string name="test_report">记录测试结果，点击列表查看该计划的详细测试记录。</string>
    <string name="module_wifi">WIFI</string>
    <string name="httpError">连接失败</string>
    <string name="httpisNull">没有网络</string>
    <string name="performance_gps_switch">GPS开关</string>
    <string name="performance_gps_searchsatellite">GPS搜星</string>
    <string name="performance_bt_switch">蓝牙开关</string>
    <string name="performance_bt_paired">蓝牙配对</string>
    <string name="performance_mobilenet_switch">移动网络开关</string>
    <string name="performance_mobilenet_browse">移动网络压力</string>
    <string name="keepRunning_key">KeeyRunning</string>
    <string name="autoStart_key">AutoStart</string>
    <string name="wakeLock_key">WakeLock</string>


</resources>